--- a/package.json
+++ b/package.json
@@ -49,12 +49,14 @@
         "fabric": "^5.3.0",
         "fast-xml-parser": "^4.2.4",
         "file-saver": "~2.0.5",
+        "flatgeobuf": "^3.33.0",
+        "jszip": "^3.10.1",
         "linkify-html": "^4.1.0",
         "lodash.clonedeep": "^4.5.0",
         "marked": "^4.0.10",
         "pinia": "^2.1.7",
         "popper-max-size-modifier": "^0.2.0",
-        "proj4": "^2.8.1",
+        "proj4": "^2.12.1",
         "redaxios": "^0.5.1",
         "screenfull": "~5.0.2",
         "shpjs": "^4.0.2",
