--- a/.github/workflows/demo-build.yml
+++ b/.github/workflows/demo-build.yml
@@ -25,6 +25,7 @@ jobs:
             - uses: actions/checkout@v4
               with:
                   path: ramp
+                  registry-url: 'https://registry.npmjs.org'
 
             - uses: actions/setup-node@v4
               with:
