--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ramp-pcar",
-    "version": "4.9.0",
+    "version": "4.10.0-beta",
     "description": "RAMP4 - The Reusable Accessible Mapping Platform, is a Javascript based web mapping platform that provides a reusable, responsive and WCAG 2.1 AA compliant common viewer for the Government of Canada. ",
     "type": "module",
     "module": "./dist/ramp.bundle.es.js",
@@ -36,7 +36,7 @@
     },
     "dependencies": {
         "@ag-grid-community/locale": "~32.0.0",
-        "@arcgis/core": "4.29.10",
+        "@arcgis/core": "4.30.9",
         "@popperjs/core": "^2.11.6",
         "@ramp4-pcar4/vue3-treeselect": "github:ramp4-pcar4/vue3-treeselect",
         "@vueform/toggle": "^2.1.3",
