--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
         "@ag-grid-community/locale": "~32.0.0",
         "@arcgis/core": "4.29.10",
         "@popperjs/core": "^2.11.6",
-        "@ramp4-pcar4/vue3-treeselect": "github:ramp4-pcar4/vue3-treeselect",
+        "@ramp4-pcar4/vue3-treeselect": "github:ramp4-pcar4/vue3-treeselect#v1.0.0",
         "@vueform/toggle": "^2.1.3",
         "ag-grid-community": "^27.3.0",
         "ag-grid-vue3": "^27.3.0",
