--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
         "vue-i18n": "^9.13.1",
         "vue-slider-component": "^4.1.0-beta.7",
         "vue-tippy": "^6.4.4",
-        "vuedraggable": "next"
+        "vuedraggable": "*"
     },
     "engines": {
         "node": "=22.5.1"
