--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "4.10.0-beta",
     "description": "RAMP4 - The Reusable Accessible Mapping Platform, is a Javascript based web mapping platform that provides a reusable, responsive and WCAG 2.1 AA compliant common viewer for the Government of Canada. ",
     "type": "module",
-    "module": "./dist/ramp.bundle.es.js",
+    "module": "./dist/bundler/ramp.bundle.es.js",
     "browser": "./dist/esDynamic/ramp.js",
     "style": "./dist/esDynamic/ramp.css",
     "types": "./dist/ts/main.d.ts",
@@ -15,7 +15,6 @@
         "dev-http": "vite --https=false",
         "launch": "vite --no-open",
         "build": "rm -rf dist && run-p -c -s build:* ts:generate",
-        "postbuild": "(rm dist/bad.css || true) && cp -a public/. dist/",
         "build:npm": "vite build --mode npm",
         "build:esDynamic": "vite build --mode esDynamic",
         "build:inline": "vite build --mode inline",
@@ -103,7 +102,7 @@
         "@types/node": "^20.14.9",
         "@types/proj4": "^2.5.2",
         "@types/throttle-debounce": "~2.1.0",
-        "@vitejs/plugin-vue": "^5.1.3",
+        "@vitejs/plugin-vue": "^5.2.1",
         "@vue/eslint-config-prettier": "^9.0.0",
         "@vue/eslint-config-typescript": "^13.0.0",
         "@vue/tsconfig": "^0.5.1",
@@ -123,8 +122,8 @@
         "tailwindcss": "^3.4.11",
         "typedoc": "^0.26.3",
         "typescript": "^5.5.3",
-        "vite": "^5.4.5",
-        "vite-plugin-mkcert": "^1.17.5",
+        "vite": "^6.0.0",
+        "vite-plugin-mkcert": "^1.17.6",
         "vitepress": "^1.0.0-beta.1",
         "vue-tsc": "^2.1.6"
     }
