--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
         "vuedraggable": "next"
     },
     "engines": {
-        "node": ">=22.5.1 <=23.3.0"
+        "node": "=22.12.0"
     },
     "devDependencies": {
         "@cypress/vite-dev-server": "^2.2.2",
