--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
         "ts:check": "vue-tsc --build --force",
         "ts:generate": "vue-tsc --declaration --emitDeclarationOnly || true",
         "ts-docs:generate": "npx typedoc --skipErrorChecking",
-        "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
-        "lint:check": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts",
-        "format": "prettier .  --write",
+        "lint": "eslint . --fix",
+        "lint:check": "eslint . --format json > results.json",
+        "format": "prettier --write src/",
         "format:check": "prettier . -c",
         "vite-docs:generate": "npx vitepress build docs"
     },
@@ -99,16 +99,16 @@
         "@types/proj4": "^2.5.2",
         "@types/throttle-debounce": "~2.1.0",
         "@vitejs/plugin-vue": "^5.2.1",
-        "@vue/eslint-config-prettier": "^9.0.0",
-        "@vue/eslint-config-typescript": "^13.0.0",
-        "@vue/tsconfig": "^0.5.1",
+        "@vue/eslint-config-prettier": "^10.1.0",
+        "@vue/eslint-config-typescript": "^14.1.4",
+        "@vue/tsconfig": "^0.7.0",
         "autoprefixer": "^10.4.20",
         "cypress": "^13.16.0",
         "cypress-plugin-tab": "~1.0.5",
         "d3-dsv": "^3.0.1",
-        "eslint": "^8.56.0",
-        "eslint-plugin-cypress": "^3.3.0",
-        "eslint-plugin-vue": "^9.27.0",
+        "eslint": "^9.16.0",
+        "eslint-plugin-cypress": "^4.1.0",
+        "eslint-plugin-vue": "^9.32.0",
         "npm-run-all2": "^6.1.2",
         "postcss": "^8.4.47",
         "postcss-import": "^16.1.0",
