Generate d.ts typings for bundler output

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "module": "./dist/bundler/ramp.bundle.es.js",
     "browser": "./dist/esDynamic/ramp.js",
     "style": "./dist/esDynamic/ramp.css",
-    "types": "./dist/ts/main.d.ts",
+    "types": "./dist/bundler/src/main.d.ts",
     "files": [
         "dist/esDynamic",
         "dist/bundler",
@@ -18,7 +18,7 @@
         "dev": "vite",
         "dev-http": "vite --https=false",
         "launch": "vite --no-open",
-        "build": "rm -rf dist && run-p -c -s build:* ts:generate",
+        "build": "rm -rf dist && run-p -c -s build:* && npm run ts:copy",
         "build:npm": "vite build --mode npm",
         "build:esDynamic": "vite build --mode esDynamic",
         "build:inline": "vite build --mode inline",
@@ -29,7 +29,7 @@
         "test:unit": "cypress open-ct",
         "test:unit:ci": "cypress run-ct --quiet --reporter spec",
         "ts:check": "vue-tsc --noEmit -p ./tsconfig.app.json",
-        "ts:generate": "vue-tsc --declaration --emitDeclarationOnly || true",
+        "ts:copy": "npx --yes cpx \"src/*.d.ts\" \"dist/bundler/src\"",
         "ts-docs:generate": "npx typedoc --skipErrorChecking",
         "lint": "eslint . --fix",
         "lint:check": "eslint . --format json > results.json",
@@ -119,6 +119,7 @@
         "typedoc": "^0.26.3",
         "typescript": "^5.5.3",
         "vite": "^6.0.0",
+        "vite-plugin-dts": "^4.4.0",
         "vite-plugin-mkcert": "^1.17.6",
         "vitepress": "^1.0.0-beta.1",
         "vue-tsc": "^2.1.6"
