--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,14 +5,10 @@
     "compilerOptions": {
         "composite": true,
         "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-        "baseUrl": ".",
         "paths": {
             "@/*": ["./src/*"],
             "vue-slider-component": ["./scripts/vue-slider-component.d.ts"]
         },
-        "lib": ["DOM", "DOM.Iterable", "ES2023"],
-        "pretty": true,
-        "declaration": true,
-        "declarationDir": "./dist/ts"
+        "lib": ["DOM", "DOM.Iterable", "ESNext"]
     }
 }
