--- a/package.json
+++ b/package.json
@@ -118,10 +118,10 @@
         "tailwindcss": "^3.4.11",
         "typedoc": "^0.26.3",
         "typescript": "^5.5.3",
-        "vite": "^6.0.0",
+        "vite": "^6.0.11",
         "vite-plugin-dts": "^4.4.0",
         "vite-plugin-mkcert": "^1.17.6",
-        "vitepress": "^1.0.0-beta.1",
+        "vitepress": "1.6.1",
         "vue-tsc": "^2.1.6"
     }
 }
