--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
         "@arcgis/core": "4.31.6",
         "@popperjs/core": "^2.11.6",
         "@ramp4-pcar4/vue3-treeselect": "github:ramp4-pcar4/vue3-treeselect#v1.0.0",
+        "@terraformer/arcgis": "^2.1.2",
+        "@terraformer/spatial": "^2.2.1",
         "@vueform/toggle": "^2.1.3",
         "ag-grid-community": "^28.1.0",
         "ag-grid-vue3": "^28.1.0",
@@ -64,8 +66,6 @@
         "screenfull": "~5.0.2",
         "shpjs": "^4.0.2",
         "svg.js": "2.7.1",
-        "terraformer": "^1.0.12",
-        "terraformer-arcgis-parser": "1.1.0",
         "throttle-debounce": "~3.0.1",
         "tiny-emitter": "^2.1.0",
         "tippy.js": "^6.3.7",
