--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
         "tailwindcss": "^3.4.11",
         "typedoc": "^0.26.3",
         "typescript": "^5.5.3",
+        "uuid": "^11.1.0",
         "vite": "^6.0.11",
         "vite-plugin-dts": "^4.4.0",
         "vite-plugin-mkcert": "^1.17.6",
