Retriggering demo build

--- a/.github/workflows/demo-build.yml
+++ b/.github/workflows/demo-build.yml
@@ -1,6 +1,9 @@
 name: Build demo site and deploy to GitHub Pages
 
-on: push
+on:
+    push:
+        branches: [main] # or your default branch
+    workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
