--- a/.github/workflows/demo-build.yml
+++ b/.github/workflows/demo-build.yml
@@ -1,9 +1,6 @@
 name: Build demo site and deploy to GitHub Pages
 
-on:
-    push:
-        branches: [AddEsriImageryTileSupport] # or your default branch
-    workflow_dispatch:
+on: push
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
