npm script ignorer

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,5 @@
 # boost heap memory limit for node. see issue #2610
 node-options=--max-old-space-size=8192
+
+# stop rando scripts in hacked packages from running
+ignore-scripts=true
