--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
         "vite-docs:generate": "npx vitepress build docs"
     },
     "dependencies": {
-        "@ag-grid-community/locale": "~32.0.0",
+        "@ag-grid-community/locale": "^35.0.0",
         "@arcgis/core": "4.34.8",
         "@arcgis/map-components": "4.34.9",
         "@popperjs/core": "^2.11.6",
@@ -48,8 +48,8 @@
         "@terraformer/arcgis": "^2.1.2",
         "@terraformer/spatial": "^2.2.1",
         "@vueform/toggle": "^2.1.3",
-        "ag-grid-community": "^28.1.0",
-        "ag-grid-vue3": "^28.1.0",
+        "ag-grid-community": "^35.0.0",
+        "ag-grid-vue3": "^35.0.0",
         "animejs": "~3.2.0",
         "await-to-js": "^3.0.0",
         "csv2geojson": "^5.1.2",
