--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
         "proj4": "^2.12.1",
         "redaxios": "^0.5.1",
         "screenfull": "~5.0.2",
-        "shpjs": "^4.0.2",
+        "shpjs": "6.2.0",
         "svg.js": "2.7.1",
         "throttle-debounce": "~3.0.1",
         "tiny-emitter": "^2.1.0",
@@ -95,6 +95,7 @@
         "@types/marked": "^4.0.1",
         "@types/node": "^20.14.9",
         "@types/proj4": "^2.5.2",
+        "@types/shpjs": "3.4.7",
         "@types/throttle-debounce": "~2.1.0",
         "@vitejs/plugin-vue": "^6.0.0",
         "@vue/eslint-config-prettier": "^10.1.0",
