--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
         "flatgeobuf": "^3.33.0",
         "jszip": "^3.10.1",
         "linkify-html": "^4.1.0",
-        "lodash.clonedeep": "^4.5.0",
+        "lodash-es": "^4.17.23",
         "marked": "^16.2.0",
         "pinia": "^2.1.7",
         "popper-max-size-modifier": "^0.2.0",
@@ -84,8 +84,7 @@
         "@types/file-saver": "~2.0.1",
         "@types/geojson": "^1.0.0",
         "@types/jest": "^24.0.19",
-        "@types/lodash": "^4.14.149",
-        "@types/lodash.clonedeep": "^4.5.7",
+        "@types/lodash-es": "^4.17.12",
         "@types/marked": "^4.0.1",
         "@types/node": "^20.14.9",
         "@types/proj4": "^2.5.2",
