--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,13 +1,6 @@
 {
     "extends": "@tsconfig/node22/tsconfig.json",
-    "include": [
-        "vite.config.*",
-        "vitest.config.*",
-        "cypress.config.*",
-        "nightwatch.conf.*",
-        "playwright.config.*",
-        "./scripts/**/*.ts"
-    ],
+    "include": ["vite.config.*", "vitest.config.*", "nightwatch.conf.*", "playwright.config.*", "./scripts/**/*.ts"],
     "compilerOptions": {
         "composite": true,
         "noEmit": true,
